# 2dgame_client

./: .gitmodules  CMakeLists.txt  generate_cmake_build_files.bat
include/components/: camera.hh  position.hh  sprite.hh
include/systems/: camera.hh  movement.hh  render.hh
src/: CMakeLists.txt  main.cc
src/components/: render.hh  transform.hh
src/systems/: camera.cc  movement.cc  render.cc  render.hh
